:bug: Fix overflowing grid sidebar
Fixes https://tree.taiga.io/project/penpot/issue/9057

--- a/frontend/src/app/main/ui/workspace/sidebar/options.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options.scss
@@ -28,6 +28,7 @@
 .element-options {
   display: grid;
   grid-auto-rows: min-content;
+  grid-template-columns: 100%;
   gap: $s-8;
   width: 100%;
   height: calc(100vh - $s-80);
